# Sale-ETL

./: .env  .gitignore  README.md  docker-compose.yaml  main.py  pyproject.toml
config/: airflow.cfg
dags/: config.py  etl_pipeline_dag.py  source_staging_dag.py
spark_jobs/: transform_customers.py  transform_geolocations.py  transform_order_items.py  transform_order_payments.py  transform_order_reviews.py  transform_orders.py  transform_products.py  transform_sellers.py  utils.py
sql/views/: vw_customer_profile.sql  vw_daily_sales_performance.sql  vw_geo_sales_heatmap.sql  vw_order_summary.sql  vw_payment_analysis.sql  vw_product_performance.sql  vw_review_sentiment.sql  vw_seller_performance.sql
